deployment/kubernetes/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f monitoring.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f monitoring.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/grafana: "true"
        io.kompose.service: grafana
    spec:
      containers:
      - env:
        - name: GF_AUTH_ANONYMOUS_ENABLED
          value: "true"
        - name: GF_AUTH_ANONYMOUS_ORG_ROLE
          value: Admin
        - name: GF_AUTH_BASIC_ENABLED
          value: "false"
        - name: GF_DEFAULT_APP_MODE
          value: development
        - name: GF_FEATURE_TOGGLES_ENABLE
          value: alertingSimplifiedRouting
        - name: GF_LOG_LEVEL
          value: debug
        image: grafana/grafana:10.4.2
        imagePullPolicy: ""
        name: grafana
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: grafana-claim0
        persistentVolumeClaim:
          claimName: grafana-claim0
status: {}
