deployment/kubernetes/ot-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f apps.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: ot-collector
  name: ot-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ot-collector
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f apps.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/grafana: "true"
        io.kompose.service: ot-collector
    spec:
      containers:
      - env:
        - name: DEPLOY_ENV
          value: local
        image: otel/opentelemetry-collector
        imagePullPolicy: ""
        name: micro1-otel
        ports:
        - containerPort: 4317
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
