deployment/kubernetes/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f apps.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f apps.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/rabbitmq: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
      - image: rabbitmq:3-management-alpine
        imagePullPolicy: ""
        name: micro1-rabbitmq
        ports:
        - containerPort: 5672
        - containerPort: 15672
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/rabbitmq/
          name: rabbitmq-claim0
        - mountPath: /var/log/rabbitmq
          name: rabbitmq-claim1
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: rabbitmq-claim0
        persistentVolumeClaim:
          claimName: rabbitmq-claim0
      - name: rabbitmq-claim1
        persistentVolumeClaim:
          claimName: rabbitmq-claim1
status: {}
