deployment/kubernetes/tempo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f monitoring.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tempo
  name: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tempo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f monitoring.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/grafana: "true"
        io.kompose.service: tempo
    spec:
      containers:
      - args:
        - -config.file
        - /etc/tempo-config.yaml
        image: grafana/tempo:2.4.1
        imagePullPolicy: ""
        name: tempo
        ports:
        - containerPort: 3200
        - containerPort: 9411
        resources: {}
        volumeMounts:
        - mountPath: /etc/tempo-config.yaml
          name: tempo-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: tempo-claim0
        persistentVolumeClaim:
          claimName: tempo-claim0
status: {}
