deployment/kubernetes/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f monitoring.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: loki
  name: loki
spec:
  ports:
  - name: "3100"
    port: 3100
    targetPort: 3100
  selector:
    io.kompose.service: loki
status:
  loadBalancer: {}
