deployment/kubernetes/ot-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f apps.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: ot-collector
  name: ot-collector
spec:
  ports:
  - name: "4317"
    port: 4317
    targetPort: 4317
  selector:
    io.kompose.service: ot-collector
status:
  loadBalancer: {}
