deployment/kubernetes/rules-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f apps.yaml
    kompose.version: 1.21.0 (992df58d8)
    logging: promtail
  creationTimestamp: null
  labels:
    io.kompose.service: rules
  name: rules
spec:
  ports:
  - name: "8083"
    port: 8083
    targetPort: 8083
  selector:
    io.kompose.service: rules
status:
  loadBalancer: {}
