deployment/kubernetes/wo-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f apps.yaml
    kompose.version: 1.21.0 (992df58d8)
    logging: promtail
  creationTimestamp: null
  labels:
    io.kompose.service: wo-service
  name: wo-service
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8081
  - name: "8090"
    port: 8090
    targetPort: 8090
  selector:
    io.kompose.service: wo-service
status:
  loadBalancer: {}
